2018-10-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_isolate_last_space): Set 
	'comment_at_end' value on element instead of parent.  As well as 
	gaining consistency with 'spaces_after_argument', this means 
	that a comment at the end of a brace command argument is not 
	lost or output at the wrong place.  Add a comment noting that 
	comments should not be inside brace commands anyway.

	* tp/Texinfo/Convert/TexinfoXML.pm (_convert_argument_and_end_line),
	* tp/Texinfo/Convert/Texinfo.pm (convert, _expand_cmd_args_to_texi):
	* tp/Texinfo/Convert/Converter.pm _expand_cmd_args_to_texi): 
	Access 'comment_at_end' in the new place.

2018-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm: Change 'same than' to 'same as' in
	comments.

2018-10-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (%simple_text_commands): Remove @ctrl.
	(_end_line): Change a comment.

2018-10-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm,
	* tp/Texinfo/Structuring.pm,
	* tp/Texinfo/Transformations.pm,
	* tp/Texinfo/Convert/Converter.pm,
	* tp/Texinfo/Convert/DocBook.pm,
	* tp/Texinfo/Convert/NodeNameNormalization.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Convert/TexinfoXML.pm,
	* tp/Texinfo/Convert/Text.pm,
	* tp/Texinfo/Convert/TextContent.pm:
	Change 'misc_line_arg' to 'line_arg'.

	* tp/Texinfo/Parser.pm
	(%begin_line_commands, %in_full_text_commands):
	Initialising code changed.

	* tp/Texinfo/Convert/Common.pm (@inline_types): Remove 
	'misc_command_arg', as no such element type is used anywhere.

	The reason for this change is that "line command" is more 
	descriptive than "miscellaneous command".  No functional changes 
	intended.

2018-10-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Check for unknown command
	right after reading the command.

2018-10-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/sectioning/list-of-tests